update.splash-screen

--- a/freinds.html
+++ b/freinds.html
@@ -41,12 +41,14 @@
             </div>
         </header>
     </div>
-    <a class="display__link" href="#">
-        <i class="fas fa-info-circle"></i>
-        <span class="display__text">Friends' Names Display</span>
-        <i class="fas fa-angle-right"></i>
-    </a>
     <main class="main-content">
+        <div class="display__link">
+            <a href="#">
+                <i class="fas fa-info-circle"></i>
+                <span class="display__text">Friends' Names Display</span>
+                <i class="fas fa-angle-right"></i>
+            </a>
+        </div>
         <article class="user-component">
             <div class="user-component__left">
                 <img class="user-component__avatar user-component__avatar--la" src="img/profile_apeach.png" >
@@ -110,6 +112,10 @@
             </li>
         </ul>
     </nav>
+    <div class="splash-screen">
+        <i class="fas fa-comment fa-5x"></i>
+        </i>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
 </body>
 </html>
