--- a/settings.html
+++ b/settings.html
@@ -29,7 +29,9 @@
             </button>
             <span class="nav-header__title nav-header__column--center">Settings</span>
             <button class="nav-header__column nav-header__right" type="button" onclick="location.href='find.html'">
-                <i class="fas fa-search fa-lg"></i>
+                <div>
+                    <i class="fas fa-search fa-lg"></i>
+                </div>
             </button>
         </header>
     </div>
