update. media query

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
         <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <!-- big screen info -->
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
+    </div>
+
+    <!-- rotate screen info -->
+    <div id="rotate-mobile">
+        <span>Rotate your screen please :)</span>
+    </div>
+
     <!-- script는 항상 body 태그를 닫기 직전에 입력 -->
     <!-- fontawesom icon kit 적용 : 아이콘 이름은 변경해선 안됨. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
