--- a/chat.html
+++ b/chat.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="chat-screen">
-    <div class="body-header body-header--chat-bg">
-        <div class="status-bar">
+    <div class="body-header">
+        <div class="status-bar body-header--chat-bg">
             <div class="status-bar__column">
                 <span>No Service</span>
                 <i class="fas fa-wifi"></i>
@@ -37,7 +37,7 @@
                 </button>
             </div>
         </header> -->
-        <header class="nav-header">
+        <header class="nav-header body-header--chat-bg">
             <div class="nav-header__column">
                 <button class="nav-header__left" type="button" onclick="location.href='chats.html'">
                     <i class="fas fa-arrow-left fa-lg"></i>
@@ -95,6 +95,16 @@
             </div>
         </div>
     </form>
+
+    <!-- big screen info -->
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
+    </div>
+
+    <!-- rotate screen info -->
+    <div id="rotate-mobile">
+        <span>Rotate your screen please :)</span>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
 </body>
 </html>
