--- a/settings.html
+++ b/settings.html
@@ -188,6 +188,16 @@
             </li>
         </ul>
     </nav>
+
+    <!-- big screen info -->
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
+    </div>
+    
+    <!-- rotate screen info -->
+    <div id="rotate-mobile">
+        <span>Rotate your screen please :)</span>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
 </body>
 </html>
