--- a/find.html
+++ b/find.html
@@ -171,7 +171,7 @@
 
     <!-- big screen info -->
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <span>Your screen is super big :(</span>
     </div>
 
     <!-- rotate screen info -->
