remove media query

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <span>Your screen is too big :(</span>
     </div>
 
-    <!-- rotate screen info -->
+    <!-- rotate screen info
     <div id="rotate-mobile">
         <span>Rotate your screen please :)</span>
-    </div>
+    </div> -->
 
     <!-- script는 항상 body 태그를 닫기 직전에 입력 -->
     <!-- fontawesom icon kit 적용 : 아이콘 이름은 변경해선 안됨. -->
