--- a/index.html
+++ b/index.html
@@ -1,54 +1,39 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to kokoa Clone</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome to kokoa clone challenge</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="status-bar">
-        <!-- Block__Element--modify -->
-        <div class="status-bar__column">
-            <span>No Service</span>
-            <i class="fas fa-wifi"></i>
-        </div>
-        <div class="status-bar__column">
-            <span>18:43</span>
-        </div>
-        <div class="status-bar__column">
-            <i class="fas fa-lock"></i>
-            <span>110%</span>
-            <i class="fas fa-battery-half"></i>
-            <i class="fas fa-bolt"></i>
-        </div>
+      <div class="status-bar__column">
+        <span>No Service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>110%</span>
+        <i class="fas fa-battery-half"></i>
+        <i class="fas fa-bolt"></i>
+      </div>
     </div>
-    <header class="welcome-header">
-        <H1 class="welcome-header__title">Welcome to kokoa Clone</H1>
-        <p class="welcome-header__sub">If you have a Kokoa Account, <Br> in with your email or phone number.</p>
-    </header>
-    <!-- 이메일, pw 입력 -->
-    <form action="freinds.html" method="GET" id="login-form">
-        <input name="username" type="text" placeholder="Email or phone number" required>
-        <input name="password"type="password" placeholder="Password" required>
-        <input type="submit" value="Log In">
-        <a class="sign-up__btn" href="#">Sign Up</a>
-        <a href="#">Find Kokoa Account or Password</a>
-    </form>
-
+    <main></main>
+    <div class="profile">
+      <div class="profile-mask">
+        <div class="profile-photo"></div>
+      </div>
+    </div>
     <!-- big screen info -->
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+      <span>Your screen is too big :(</span>
     </div>
-
-    <!-- rotate screen info
-    <div id="rotate-mobile">
-        <span>Rotate your screen please :)</span>
-    </div> -->
-
-    <!-- script는 항상 body 태그를 닫기 직전에 입력 -->
-    <!-- fontawesom icon kit 적용 : 아이콘 이름은 변경해선 안됨. -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
