chats, find done

--- a/chats.html
+++ b/chats.html
@@ -147,7 +147,26 @@
         </button>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <article class="user-component--2x">
+        <div class="profile--2x">
+          <div class="profile-mask">
+            <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+            
+          </div>
+        </div>
+        <div class="user-component__content--3x">
+          <div class="user__text">
+            <span class="user__nickname">Nickname</span>
+            <span class="user__message">Hi</span>
+          </div>
+          <div class="user__subinfo">
+            <span class="user__sub-text">12:22</span>
+            <div class="badge__number-list">4</div>
+          </div>
+        </div>
+      </article>
+    </main>
     <article class="bottom-tabbar">
       <ul class="bottom-tabbar-box">
         <li class="bottom-tabbar__column">
