--- a/more.html
+++ b/more.html
@@ -27,7 +27,7 @@
     </div>
     <nav class="gnb">
       <div class="gnb__column">
-        <span class="gnb__title">Find</span>
+        <span class="gnb__title">More</span>
       </div>
       <div class="gnb__column">
         <button>
