--- a/find.html
+++ b/find.html
@@ -93,7 +93,185 @@
         </button>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <ul class="menu-list">
+        <li class="find-menu">
+          <svg
+            width="100px"
+            height="100px"
+            viewBox="0 0 100 100"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <title>icon_scan</title>
+            <g
+              id="icon_scan"
+              class="find-menu__icon"
+              stroke="white"
+              stroke-width="4"
+              fill="none"
+              fill-rule="evenodd"
+            >
+              <path
+                d="M4.16666667,76 C6.46785312,76 8.33333333,77.8654802 8.33333333,80.1666667 L8.33333333,80.1666667 L8.33333333,92.6666667 L20.8333333,92.6666667 C23.1345198,92.6666667 25,94.5321469 25,96.8333333 C25,99.1345198 23.1345198,101 20.8333333,101 L20.8333333,101 L8.33333333,101 C3.73096042,101 0,97.2690396 0,92.6666667 L0,92.6666667 L0,80.1666667 C0,77.8654802 1.86548021,76 4.16666667,76 Z M96.8333333,76 C99.1345198,76 101,77.8654802 101,80.1666667 L101,80.1666667 L101,92.6666667 C101,97.2690396 97.2690396,101 92.6666667,101 L92.6666667,101 L80.1666667,101 C77.8654802,101 76,99.1345198 76,96.8333333 C76,94.5321469 77.8654802,92.6666667 80.1666667,92.6666667 L80.1666667,92.6666667 L92.6666667,92.6666667 L92.6666667,80.1666667 C92.6666667,77.8654802 94.5321469,76 96.8333333,76 Z M73,46 C75.209139,46 77,47.790861 77,50 C77,52.209139 75.209139,54 73,54 L27,54 C24.790861,54 23,52.209139 23,50 C23,47.790861 24.790861,46 27,46 L73,46 Z M20.8333333,0 C23.1345198,0 25,1.86548021 25,4.16666667 C25,6.46785312 23.1345198,8.33333333 20.8333333,8.33333333 L20.8333333,8.33333333 L8.33333333,8.33333333 L8.33333333,20.8333333 C8.33333333,23.1345198 6.46785312,25 4.16666667,25 C1.86548021,25 0,23.1345198 0,20.8333333 L0,20.8333333 L0,8.33333333 C0,3.73096042 3.73096042,0 8.33333333,0 L8.33333333,0 Z M92.6666667,0 C97.2690396,0 101,3.73096042 101,8.33333333 L101,8.33333333 L101,20.8333333 C101,23.1345198 99.1345198,25 96.8333333,25 C94.5321469,25 92.6666667,23.1345198 92.6666667,20.8333333 L92.6666667,20.8333333 L92.6666667,8.33333333 L80.1666667,8.33333333 C77.8654802,8.33333333 76,6.46785312 76,4.16666667 C76,1.86548021 77.8654802,0 80.1666667,0 L80.1666667,0 Z"
+                id="Combined-Shape"
+                fill="inherit"
+                fill-rule="nonzero"
+              ></path>
+            </g>
+          </svg>
+          <p class="find-menu__text">QR Code</p>
+        </li>
+        <li class="find-menu">
+          <svg
+            width="100px"
+            height="100px"
+            viewBox="0 0 100 100"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <title>icon_book</title>
+            <g
+              id="icon_book"
+              class="find-menu__icon"
+              stroke="none"
+              stroke-width="1"
+              fill="none"
+              fill-rule="evenodd"
+            >
+              <g id="Group" fill="inherit" fill-rule="nonzero">
+                <path
+                  d="M92.5833333,0 L25.25,0 C15.9532067,0 8.41666667,7.53654004 8.41666667,16.8333333 L8.41666667,21.0416667 L4.20833333,21.0416667 C1.88413501,21.0416667 0,22.9258017 0,25.25 C0,27.5741983 1.88413501,29.4583333 4.20833333,29.4583333 L8.41666667,29.4583333 L8.41666667,46.2916667 L4.20833333,46.2916667 C1.88413501,46.2916667 0,48.1758017 0,50.5 C0,52.8241983 1.88413501,54.7083333 4.20833333,54.7083333 L8.41666667,54.7083333 L8.41666667,71.5416667 L4.20833333,71.5416667 C1.88413501,71.5416667 0,73.4258017 0,75.75 C0,78.0741983 1.88413501,79.9583333 4.20833333,79.9583333 L8.41666667,79.9583333 L8.41666667,84.1666667 C8.41666667,93.46346 15.9532067,101 25.25,101 L92.5833333,101 C97.23173,101 101,97.23173 101,92.5833333 L101,8.41666667 C101,3.76827002 97.23173,0 92.5833333,0 Z M92.5833333,92.5833333 L25.25,92.5833333 C20.6016034,92.5833333 16.8333333,88.8150633 16.8333333,84.1666667 L16.8333333,79.9583333 L21.0416667,79.9583333 C23.365865,79.9583333 25.25,78.0741983 25.25,75.75 C25.25,73.4258017 23.365865,71.5416667 21.0416667,71.5416667 L16.8333333,71.5416667 L16.8333333,54.7083333 L21.0416667,54.7083333 C23.365865,54.7083333 25.25,52.8241983 25.25,50.5 C25.25,48.1758017 23.365865,46.2916667 21.0416667,46.2916667 L16.8333333,46.2916667 L16.8333333,29.4583333 L21.0416667,29.4583333 C23.365865,29.4583333 25.25,27.5741983 25.25,25.25 C25.25,22.9258017 23.365865,21.0416667 21.0416667,21.0416667 L16.8333333,21.0416667 L16.8333333,16.8333333 C16.8333333,12.1849367 20.6016034,8.41666667 25.25,8.41666667 L92.5833333,8.41666667 L92.5833333,92.5833333 Z"
+                  id="Shape"
+                ></path>
+                <path
+                  d="M38.1666667,80 C40.4678531,80 42.3333333,78.1149328 42.3333333,75.7895845 L42.3333333,71.579169 C42.3333333,62.2777759 49.7952542,54.7375069 59,54.7375069 C68.2047458,54.7375069 75.6666667,62.2777759 75.6666667,71.579169 L75.6666667,75.7895845 C75.6666667,78.1149328 77.5321469,80 79.8333333,80 C82.1345198,80 84,78.1149328 84,75.7895845 L84,71.579169 C83.9897498,62.3780463 79.0296662,53.9101924 71.0520833,49.4744875 C77.34138,42.8209686 77.1822692,32.2984249 70.6947404,25.8421821 C64.2072117,19.3859393 53.7927883,19.3859393 47.3052596,25.8421821 C40.8177308,32.2984249 40.65862,42.8209686 46.9479167,49.4744875 C38.9703338,53.9101924 34.0102502,62.3780463 34,71.579169 L34,75.7895845 C34,78.1149328 35.8654802,80 38.1666667,80 Z M50.6666667,37.8958449 C50.6666667,33.2451483 54.3976271,29.4750138 59,29.4750138 C63.6023729,29.4750138 67.3333333,33.2451483 67.3333333,37.8958449 C67.3333333,42.5465414 63.6023729,46.3166759 59,46.3166759 C54.3976271,46.3166759 50.6666667,42.5465414 50.6666667,37.8958449 Z"
+                  id="Shape"
+                ></path>
+              </g>
+            </g>
+          </svg>
+          <p class="find-menu__text">Add by<br />Contants</p>
+        </li>
+        <li class="find-menu">
+          <svg
+            width="100px"
+            height="100px"
+            viewBox="0 0 100 100"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <title>icon_id</title>
+            <g
+              id="icon_id"
+              class="find-menu__icon"
+              stroke="none"
+              stroke-width="1"
+              fill="none"
+              fill-rule="evenodd"
+            >
+              <path
+                d="M50,50 C52.209139,50 54,51.8281706 54,54.0833333 L54,54.0833333 L54,94.9166667 C54,97.1718294 52.209139,99 50,99 C47.790861,99 46,97.1718294 46,94.9166667 L46,94.9166667 L46,54.0833333 C46,51.8281706 47.790861,50 50,50 Z M50.5,34 C61.8218374,34 71,43.2741016 71,54.7142857 L71,54.7142857 L71,87.8571429 C71,90.1451797 69.1643675,92 66.9,92 C64.6356325,92 62.8,90.1451797 62.8,87.8571429 L62.8,87.8571429 L62.8,54.7142857 C62.7999999,47.8501754 57.2931023,42.2857145 50.5,42.2857145 C43.7068977,42.2857145 38.2000001,47.8501754 38.2,54.7142857 L38.2,54.7142857 L38.2,87.8571429 C38.2,90.1451797 36.3643675,92 34.1,92 C31.8356325,92 30,90.1451797 30,87.8571429 L30,87.8571429 L30,54.7142857 C30,43.2741016 39.1781626,34 50.5,34 Z M50,17 C70.4345357,17 87,33.6214287 87,54.125 L87,54.125 L87,78.875 C87,81.1531746 85.1593929,83 82.8888889,83 C80.6183849,83 78.7777778,81.1531746 78.7777778,78.875 L78.7777778,78.875 L78.7777778,54.125 C78.7777778,38.1777778 65.8935278,25.25 50,25.25 C34.1064722,25.25 21.2222222,38.1777778 21.2222222,54.125 L21.2222222,54.125 L21.2222222,78.875 C21.2222222,81.1531746 19.3816151,83 17.1111111,83 C14.8406071,83 13,81.1531746 13,78.875 L13,78.875 L13,54.125 C13,33.6214287 29.5654643,17 50,17 Z M50.5,1 C72.3809572,1 91.2200283,12.9720297 99.6548176,32.2403177 C100.093409,33.2404503 100.114869,34.3733616 99.7144665,35.3892788 C99.3140637,36.405196 98.5246767,37.220698 97.5203416,37.6559912 C96.9988757,37.8784549 96.4377381,37.993796 95.8705051,37.9951131 C94.2290018,37.9967239 92.7427933,37.0281208 92.0861925,35.5287722 C84.9918953,19.3023046 69.0606612,9.22113625 50.5,9.22113625 C31.9393388,9.22113625 16.0081047,19.3023046 8.91380752,35.5287722 C8.47702928,36.5296926 7.65874515,37.3163958 6.63936213,37.7154373 C5.61997912,38.1144787 4.48320289,38.0930917 3.47965839,37.6559912 C2.47532333,37.220698 1.68593635,36.405196 1.28553353,35.3892788 C0.885130716,34.3733616 0.906590755,33.2404503 1.34518236,32.2403177 C9.77997171,12.9720297 28.6190428,1 50.5,1 Z"
+                id="Combined-Shape"
+                fill="inherit"
+                fill-rule="nonzero"
+              ></path>
+            </g>
+          </svg>
+          <p class="find-menu__text">Add by ID</p>
+        </li>
+        <li class="find-menu">
+          <svg
+            width="100px"
+            height="100px"
+            viewBox="0 0 100 100"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <title>icon_mail</title>
+            <g
+              id="icon_mail"
+              class="find-menu__icon"
+              stroke="none"
+              stroke-width="1"
+              fill="none"
+              fill-rule="evenodd"
+            >
+              <path
+                d="M97.4499635,16.6000157 C94.655908,12.4663343 89.9893576,9.99249993 84.9999682,10 L15,10 C6.71572624,10 0,16.7157444 0,25.0000139 L0,75 C0,83.2842727 6.71572624,90 15,90 L84.9999682,90 C93.2842363,90 100,83.2842727 100,75 L100,25.0000139 C100.006643,22.0083742 99.1186057,19.0830754 97.4499635,16.6000157 L97.4499635,16.6000157 Z M15.6785023,20 L85.2717883,20 C86.6995798,20.0017924 88.057658,20.6121515 89,21.6755647 L50.4751453,44 L12,21.6262834 C12.9398034,20.5939411 14.2758086,20.0032869 15.6785023,20 Z M90,74.9526814 C90,77.7402385 87.7614237,80 85,80 L15,80 C12.2385763,80 10,77.7402385 10,74.9526814 L10,32 L45,52.7444795 C46.5240291,53.6164588 48.2482362,54.0689952 50,54.0567823 C51.7562989,54.0536362 53.4808018,53.5836139 55,52.6940063 L90,32 L90,74.9526814 Z"
+                id="Shape"
+                fill="inherit"
+                fill-rule="nonzero"
+              ></path>
+            </g>
+          </svg>
+          <p class="find-menu__text">Invite</p>
+        </li>
+      </ul>
+      <article class="catergory">
+        <span>Recoommended Friends</span>
+      </article>
+      <div class="catergory__emtpy">
+        <span>You have no recoommended friends.</span>
+      </div>
+      <article class="catergory">
+        <span>Open chats</span>
+        <div>
+          <span class="catergory__sub-text">Go to Openchat home</span
+          ><i class="fas fa-chevron-right"></i>
+        </div>
+      </article>
+      <article class="open-chat">
+        <div class="open-chat__column">
+          <span>#BTS</span>
+          <span>#BTS#ARMY</span>
+          <div class="open-chat__status">
+            <div class="profile--tiny">
+              <div class="profile-mask">
+                <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+              </div>
+            </div>
+            <span>202 members |</span><span>Active</span>
+          </div>
+        </div>
+        <div class="open-chat__column">
+          <div class="open-chat__thumbnail">
+            <div class="open-chat__like">
+              <i class="fas fa-heart"></i>
+              <span>200</span>
+            </div>
+            <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+          </div>
+        </div>
+      </article>
+      <article class="open-chat">
+        <div class="open-chat__column">
+          <span>#BTS</span>
+          <span>#BTS#ARMY</span>
+          <div class="open-chat__status">
+            <div class="profile--tiny">
+              <div class="profile-mask">
+                <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+              </div>
+            </div>
+            <span>202 members |</span><span>Active</span>
+          </div>
+        </div>
+        <div class="open-chat__column">
+          <div class="open-chat__thumbnail">
+            <div class="open-chat__like">
+              <i class="fas fa-heart"></i>
+              <span>200</span>
+            </div>
+            <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+          </div>
+        </div>
+      </article>
+    </main>
     <article class="bottom-tabbar">
       <ul class="bottom-tabbar-box">
         <li class="bottom-tabbar__column">
