--- a/friends.html
+++ b/friends.html
@@ -27,7 +27,7 @@
     </div>
     <nav class="gnb">
       <div class="gnb__column">
-        <span class="gnb__title">Freinds</span>
+        <span class="gnb__title">Friends</span>
       </div>
       <div class="gnb__column">
         <button>
