bottom_tabbar, color fix

--- a/chats.html
+++ b/chats.html
@@ -151,8 +151,50 @@
       <article class="user-component--2x">
         <div class="profile--2x">
           <div class="profile-mask">
-            <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
-            
+            <img
+              class="profile-photo"
+              src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"
+            />
+          </div>
+        </div>
+        <div class="user-component__content--3x">
+          <div class="user__text">
+            <span class="user__nickname">Nickname</span>
+            <span class="user__message">Hi</span>
+          </div>
+          <div class="user__subinfo">
+            <span class="user__sub-text">12:22</span>
+            <div class="badge__number-list">4</div>
+          </div>
+        </div>
+      </article>
+      <article class="user-component--2x">
+        <div class="profile--2x">
+          <div class="profile-mask">
+            <img
+              class="profile-photo"
+              src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"
+            />
+          </div>
+        </div>
+        <div class="user-component__content--3x">
+          <div class="user__text">
+            <span class="user__nickname">Nickname</span>
+            <span class="user__message">Hi</span>
+          </div>
+          <div class="user__subinfo">
+            <span class="user__sub-text">12:22</span>
+            <div class="badge__number-list">4</div>
+          </div>
+        </div>
+      </article>
+      <article class="user-component--2x">
+        <div class="profile--2x">
+          <div class="profile-mask">
+            <img
+              class="profile-photo"
+              src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"
+            />
           </div>
         </div>
         <div class="user-component__content--3x">
@@ -207,33 +249,35 @@
           </a>
         </li>
         <li class="bottom-tabbar__column">
-          <div class="badge__number">4</div>
           <a href="chats.html">
-            <svg
-              width="100px"
-              height="100px"
-              viewBox="0 0 100 100"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-            >
-              <title>bottom_tabbar_2_p</title>
-              <g
-                id="bottom_tabbar_2_p"
-                class="bottom_tabbar__icon--focus"
-                stroke="none"
-                stroke-width="1"
-                fill="currentColor"
-                fill-rule="evenodd"
+            <div class="bottom-tabbar__icon-area">
+              <div class="badge__number">4</div>
+              <svg
+                width="100px"
+                height="100px"
+                viewBox="0 0 100 100"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
               >
-                <path
-                  d="M50,0 C22.4270833,0 0,20.5624997 0,45.8333327 C0.0624403114,56.931035 4.37123033,67.5837354 12.0416667,75.6041657 C12.0416667,75.9479157 11.9895833,76.2916657 11.96875,76.6458323 C11.6145833,81.5312489 11.2083333,87.0624989 5.38541667,92.8854155 C4.1923742,94.0771303 3.83524971,95.8704471 4.48073987,97.4282909 C5.12623004,98.9861346 6.64705549,100.001326 8.33333333,100 C9.05208333,100 25.5,99.864582 39.28125,90.5624988 C42.8085223,91.2863177 46.3992425,91.6562072 50,91.6666655 C77.5729167,91.6666655 100,71.1041657 100,45.8333327 C100,20.5624997 77.5729167,0 50,0 Z"
-                  id="Path"
-                  fill="inherit"
-                  fill-rule="nonzero"
-                ></path>
-              </g>
-            </svg>
+                <title>bottom_tabbar_2_p</title>
+                <g
+                  id="bottom_tabbar_2_p"
+                  class="bottom_tabbar__icon--focus"
+                  stroke="none"
+                  stroke-width="1"
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                >
+                  <path
+                    d="M50,0 C22.4270833,0 0,20.5624997 0,45.8333327 C0.0624403114,56.931035 4.37123033,67.5837354 12.0416667,75.6041657 C12.0416667,75.9479157 11.9895833,76.2916657 11.96875,76.6458323 C11.6145833,81.5312489 11.2083333,87.0624989 5.38541667,92.8854155 C4.1923742,94.0771303 3.83524971,95.8704471 4.48073987,97.4282909 C5.12623004,98.9861346 6.64705549,100.001326 8.33333333,100 C9.05208333,100 25.5,99.864582 39.28125,90.5624988 C42.8085223,91.2863177 46.3992425,91.6562072 50,91.6666655 C77.5729167,91.6666655 100,71.1041657 100,45.8333327 C100,20.5624997 77.5729167,0 50,0 Z"
+                    id="Path"
+                    fill="inherit"
+                    fill-rule="nonzero"
+                  ></path>
+                </g>
+              </svg>
+            </div>
           </a>
         </li>
         <li class="bottom-tabbar__column">
@@ -256,7 +300,7 @@
                 fill-rule="evenodd"
               >
                 <path
-                  d="M5.00009327,43.0439126 C5.02509626,57.516781 13.2861029,70.715965 26.2995074,77.0753161 C39.3129119,83.4346672 54.8136748,81.8473126 66.2650626,72.9826462 L87.1616093,93.8591007 C89.0459092,95.4712223 91.854756,95.362833 93.6089691,93.6103066 C95.3631822,91.8577802 95.4716758,89.0516341 93.8580027,87.169146 L72.961456,66.2926915 C83.1826547,53.1902024 83.6882566,34.9699272 74.209371,21.3218232 C64.7304853,7.67371919 47.469549,1.76894873 31.6063209,6.74780325 C15.7430929,11.7266578 4.9634237,26.4322911 5.00009327,43.0439126 Z M42.9939083,14.5760201 C58.7314229,14.5760201 71.4891993,27.3215297 71.4891993,43.0439126 C71.4891993,58.7662955 58.7314229,71.5118051 42.9939083,71.5118051 C27.2563937,71.5118051 14.4986173,58.7662955 14.4986173,43.0439126 C14.4986173,27.3215297 27.2563937,14.5760201 42.9939083,14.5760201 Z"
+                  d="M2.00009948,42.5801735 C2.02676934,58.0178998 10.8385097,72.0970294 24.7194746,78.8803372 C38.6004394,85.663645 55.1345865,83.9704668 67.3494001,74.5148226 L89.6390499,96.7830408 C91.6489698,98.5026371 94.6450731,98.3870219 96.5162337,96.5176604 C98.3873944,94.6482989 98.5031208,91.6550764 96.7818695,89.647089 L74.4922197,67.3788709 C85.3948317,53.4028826 85.9341403,33.9679224 75.823329,19.4099447 C65.7125177,4.85196713 47.3008522,-1.44645468 30.3800756,3.86432347 C13.4592991,9.17510162 1.96098528,24.8611106 2.00009948,42.5801735 Z M42.5268355,12.2144215 C59.3135178,12.2144215 72.9218125,25.8096317 72.9218125,42.5801735 C72.9218125,59.3507152 59.3135178,72.9459254 42.5268355,72.9459254 C25.7401532,72.9459254 12.1318585,59.3507152 12.1318585,42.5801735 C12.1318585,25.8096317 25.7401532,12.2144215 42.5268355,12.2144215 Z"
                   id="Shape"
                   fill="inherit"
                   fill-rule="nonzero"
@@ -266,33 +310,35 @@
           </a>
         </li>
         <li class="bottom-tabbar__column">
-          <div class="badge__dot"></div>
           <a href="more.html">
-            <svg
-              width="100px"
-              height="100px"
-              viewBox="0 0 100 100"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-            >
-              <title>bottom_tabbar_4_n</title>
-              <g
-                id="bottom_tabbar_4_n"
-                class="bottom_tabbar__icon"
-                stroke="none"
-                stroke-width="1"
-                fill="none"
-                fill-rule="evenodd"
+            <div class="bottom-tabbar__icon-area">
+              <div class="badge__dot"></div>
+              <svg
+                width="100px"
+                height="100px"
+                viewBox="0 0 100 100"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
               >
-                <path
-                  d="M50,35 C41.7157288,35 35,41.7157288 35,50 C35,58.2842712 41.7157288,65 50,65 C58.2842712,65 65,58.2842712 65,50 C65,41.7157288 58.2842712,35 50,35 Z M50,55 C47.2385763,55 45,52.7614237 45,50 C45,47.2385763 47.2385763,45 50,45 C52.7614237,45 55,47.2385763 55,50 C55,52.7614237 52.7614237,55 50,55 Z M85,35 C76.7157288,35 70,41.7157288 70,50 C70,58.2842712 76.7157288,65 85,65 C93.2842712,65 100,58.2842712 100,50 C100,41.7157288 93.2842712,35 85,35 Z M85,55 C82.2385763,55 80,52.7614237 80,50 C80,47.2385763 82.2385763,45 85,45 C87.7614237,45 90,47.2385763 90,50 C90,52.7614237 87.7614237,55 85,55 Z M15,35 C6.71572875,35 0,41.7157288 0,50 C0,58.2842712 6.71572875,65 15,65 C23.2842712,65 30,58.2842712 30,50 C30,41.7157288 23.2842712,35 15,35 Z M15,55 C12.2385763,55 10,52.7614237 10,50 C10,47.2385763 12.2385763,45 15,45 C17.7614237,45 20,47.2385763 20,50 C20,52.7614237 17.7614237,55 15,55 Z"
-                  id="Shape"
-                  fill="inherit"
-                  fill-rule="nonzero"
-                ></path>
-              </g>
-            </svg>
+                <title>bottom_tabbar_4_n</title>
+                <g
+                  id="bottom_tabbar_4_n"
+                  class="bottom_tabbar__icon"
+                  stroke="none"
+                  stroke-width="1"
+                  fill="none"
+                  fill-rule="evenodd"
+                >
+                  <path
+                    d="M50,35 C41.7157288,35 35,41.7157288 35,50 C35,58.2842712 41.7157288,65 50,65 C58.2842712,65 65,58.2842712 65,50 C65,41.7157288 58.2842712,35 50,35 Z M50,55 C47.2385763,55 45,52.7614237 45,50 C45,47.2385763 47.2385763,45 50,45 C52.7614237,45 55,47.2385763 55,50 C55,52.7614237 52.7614237,55 50,55 Z M85,35 C76.7157288,35 70,41.7157288 70,50 C70,58.2842712 76.7157288,65 85,65 C93.2842712,65 100,58.2842712 100,50 C100,41.7157288 93.2842712,35 85,35 Z M85,55 C82.2385763,55 80,52.7614237 80,50 C80,47.2385763 82.2385763,45 85,45 C87.7614237,45 90,47.2385763 90,50 C90,52.7614237 87.7614237,55 85,55 Z M15,35 C6.71572875,35 0,41.7157288 0,50 C0,58.2842712 6.71572875,65 15,65 C23.2842712,65 30,58.2842712 30,50 C30,41.7157288 23.2842712,35 15,35 Z M15,55 C12.2385763,55 10,52.7614237 10,50 C10,47.2385763 12.2385763,45 15,45 C17.7614237,45 20,47.2385763 20,50 C20,52.7614237 17.7614237,55 15,55 Z"
+                    id="Shape"
+                    fill="inherit"
+                    fill-rule="nonzero"
+                  ></path>
+                </g>
+              </svg>
+            </div>
           </a>
         </li>
       </ul>
