--- a/more.html
+++ b/more.html
@@ -161,33 +161,35 @@
           </a>
         </li>
         <li class="bottom-tabbar__column">
-          <div class="badge__number">4</div>
           <a href="chats.html">
-            <svg
-              width="100px"
-              height="100px"
-              viewBox="0 0 100 100"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-            >
-              <title>bottom_tabbar_2_n</title>
-              <g
-                id="bottom_tabbar_2_n"
-                class="bottom_tabbar__icon"
-                stroke="none"
-                stroke-width="1"
-                fill="none"
-                fill-rule="evenodd"
+            <div class="bottom-tabbar__icon-area">
+              <div class="badge__number">4</div>
+              <svg
+                width="100px"
+                height="100px"
+                viewBox="0 0 100 100"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
               >
-                <path
-                  d="M50,-7.10542736e-15 C22.4270833,-7.10542736e-15 0,20.5624997 0,45.8333327 C0.0624403114,56.931035 4.37123033,67.5837354 12.0416667,75.6041657 C12.0416667,75.9479157 11.9895833,76.2916657 11.96875,76.6458323 C11.6145833,81.5312489 11.2083333,87.0624989 5.38541667,92.8854155 C4.1923742,94.0771303 3.83524971,95.8704471 4.48073987,97.4282909 C5.12623004,98.9861346 6.64705549,100.001326 8.33333333,100 L8.33333333,100 C9.05208333,100 25.5,99.864582 39.28125,90.5624988 C42.8085223,91.2863177 46.3992425,91.6562072 50,91.6666655 C77.5729167,91.6666655 100,71.1041657 100,45.8333327 C100,20.5624997 77.5729167,-7.10542736e-15 50,-7.10542736e-15 Z M39.89675,81.4470886 C38.7040271,81.1633309 37.4469309,81.4217045 36.462625,82.1529114 C30.8909694,86.0776164 24.5388906,88.7541449 17.8395,90 C19.7345175,85.8159618 20.7750822,81.2953744 20.900125,76.7035443 C20.962375,75.7693671 21.024625,74.8974684 21.13875,74.1189873 C21.3144446,72.8218517 20.8684181,71.5177814 19.93525,70.6002532 C13.0294432,64.0147197 9.08440101,54.9115078 9,45.3670886 C9,24.7632911 27.61275,8 50.5,8 C73.38725,8 92,24.7632911 92,45.3670886 C92,69.0744304 67.214125,87.9240506 39.89675,81.4470886 Z"
-                  id="Shape"
-                  fill="inherit"
-                  fill-rule="nonzero"
-                ></path>
-              </g>
-            </svg>
+                <title>bottom_tabbar_2_n</title>
+                <g
+                  id="bottom_tabbar_2_n"
+                  class="bottom_tabbar__icon"
+                  stroke="none"
+                  stroke-width="1"
+                  fill="none"
+                  fill-rule="evenodd"
+                >
+                  <path
+                    d="M50,-7.10542736e-15 C22.4270833,-7.10542736e-15 0,20.5624997 0,45.8333327 C0.0624403114,56.931035 4.37123033,67.5837354 12.0416667,75.6041657 C12.0416667,75.9479157 11.9895833,76.2916657 11.96875,76.6458323 C11.6145833,81.5312489 11.2083333,87.0624989 5.38541667,92.8854155 C4.1923742,94.0771303 3.83524971,95.8704471 4.48073987,97.4282909 C5.12623004,98.9861346 6.64705549,100.001326 8.33333333,100 L8.33333333,100 C9.05208333,100 25.5,99.864582 39.28125,90.5624988 C42.8085223,91.2863177 46.3992425,91.6562072 50,91.6666655 C77.5729167,91.6666655 100,71.1041657 100,45.8333327 C100,20.5624997 77.5729167,-7.10542736e-15 50,-7.10542736e-15 Z M39.89675,81.4470886 C38.7040271,81.1633309 37.4469309,81.4217045 36.462625,82.1529114 C30.8909694,86.0776164 24.5388906,88.7541449 17.8395,90 C19.7345175,85.8159618 20.7750822,81.2953744 20.900125,76.7035443 C20.962375,75.7693671 21.024625,74.8974684 21.13875,74.1189873 C21.3144446,72.8218517 20.8684181,71.5177814 19.93525,70.6002532 C13.0294432,64.0147197 9.08440101,54.9115078 9,45.3670886 C9,24.7632911 27.61275,8 50.5,8 C73.38725,8 92,24.7632911 92,45.3670886 C92,69.0744304 67.214125,87.9240506 39.89675,81.4470886 Z"
+                    id="Shape"
+                    fill="inherit"
+                    fill-rule="nonzero"
+                  ></path>
+                </g>
+              </svg>
+            </div>
           </a>
         </li>
         <li class="bottom-tabbar__column">
@@ -210,7 +212,7 @@
                 fill-rule="evenodd"
               >
                 <path
-                  d="M5.00009327,43.0439126 C5.02509626,57.516781 13.2861029,70.715965 26.2995074,77.0753161 C39.3129119,83.4346672 54.8136748,81.8473126 66.2650626,72.9826462 L87.1616093,93.8591007 C89.0459092,95.4712223 91.854756,95.362833 93.6089691,93.6103066 C95.3631822,91.8577802 95.4716758,89.0516341 93.8580027,87.169146 L72.961456,66.2926915 C83.1826547,53.1902024 83.6882566,34.9699272 74.209371,21.3218232 C64.7304853,7.67371919 47.469549,1.76894873 31.6063209,6.74780325 C15.7430929,11.7266578 4.9634237,26.4322911 5.00009327,43.0439126 Z M42.9939083,14.5760201 C58.7314229,14.5760201 71.4891993,27.3215297 71.4891993,43.0439126 C71.4891993,58.7662955 58.7314229,71.5118051 42.9939083,71.5118051 C27.2563937,71.5118051 14.4986173,58.7662955 14.4986173,43.0439126 C14.4986173,27.3215297 27.2563937,14.5760201 42.9939083,14.5760201 Z"
+                  d="M2.00009948,42.5801735 C2.02676934,58.0178998 10.8385097,72.0970294 24.7194746,78.8803372 C38.6004394,85.663645 55.1345865,83.9704668 67.3494001,74.5148226 L89.6390499,96.7830408 C91.6489698,98.5026371 94.6450731,98.3870219 96.5162337,96.5176604 C98.3873944,94.6482989 98.5031208,91.6550764 96.7818695,89.647089 L74.4922197,67.3788709 C85.3948317,53.4028826 85.9341403,33.9679224 75.823329,19.4099447 C65.7125177,4.85196713 47.3008522,-1.44645468 30.3800756,3.86432347 C13.4592991,9.17510162 1.96098528,24.8611106 2.00009948,42.5801735 Z M42.5268355,12.2144215 C59.3135178,12.2144215 72.9218125,25.8096317 72.9218125,42.5801735 C72.9218125,59.3507152 59.3135178,72.9459254 42.5268355,72.9459254 C25.7401532,72.9459254 12.1318585,59.3507152 12.1318585,42.5801735 C12.1318585,25.8096317 25.7401532,12.2144215 42.5268355,12.2144215 Z"
                   id="Shape"
                   fill="inherit"
                   fill-rule="nonzero"
@@ -220,45 +222,47 @@
           </a>
         </li>
         <li class="bottom-tabbar__column">
-          <div class="badge__dot"></div>
           <a href="more.html">
-            <svg
-              width="100px"
-              height="100px"
-              viewBox="0 0 100 100"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-            >
-              <title>bottom_tabbar_4_p</title>
-              <g
-                id="bottom_tabbar_4_p"
-                class="bottom_tabbar__icon--focus"
-                stroke="none"
-                stroke-width="1"
-                fill="inherit"
-                fill-rule="evenodd"
+            <div class="bottom-tabbar__icon-area">
+              <div class="badge__dot"></div>
+              <svg
+                width="100px"
+                height="100px"
+                viewBox="0 0 100 100"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
               >
-                <path
-                  d="M50,35 C41.7157288,35 35,41.7157288 35,50 C35,58.2842712 41.7157288,65 50,65 C58.2842712,65 65,58.2842712 65,50 C65,41.7157288 58.2842712,35 50,35 Z"
-                  id="Path"
+                <title>bottom_tabbar_4_p</title>
+                <g
+                  id="bottom_tabbar_4_p"
+                  class="bottom_tabbar__icon--focus"
+                  stroke="none"
+                  stroke-width="1"
                   fill="inherit"
-                  fill-rule="nonzero"
-                ></path>
-                <path
-                  d="M85,35 C76.7157288,35 70,41.7157288 70,50 C70,58.2842712 76.7157288,65 85,65 C93.2842712,65 100,58.2842712 100,50 C100,41.7157288 93.2842712,35 85,35 Z"
-                  id="Path"
-                  fill="inherit"
-                  fill-rule="nonzero"
-                ></path>
-                <path
-                  d="M15,35 C6.71572875,35 0,41.7157288 0,50 C0,58.2842712 6.71572875,65 15,65 C23.2842712,65 30,58.2842712 30,50 C30,41.7157288 23.2842712,35 15,35 Z"
-                  id="Path"
-                  fill="inherit"
-                  fill-rule="nonzero"
-                ></path>
-              </g>
-            </svg>
+                  fill-rule="evenodd"
+                >
+                  <path
+                    d="M50,35 C41.7157288,35 35,41.7157288 35,50 C35,58.2842712 41.7157288,65 50,65 C58.2842712,65 65,58.2842712 65,50 C65,41.7157288 58.2842712,35 50,35 Z"
+                    id="Path"
+                    fill="inherit"
+                    fill-rule="nonzero"
+                  ></path>
+                  <path
+                    d="M85,35 C76.7157288,35 70,41.7157288 70,50 C70,58.2842712 76.7157288,65 85,65 C93.2842712,65 100,58.2842712 100,50 C100,41.7157288 93.2842712,35 85,35 Z"
+                    id="Path"
+                    fill="inherit"
+                    fill-rule="nonzero"
+                  ></path>
+                  <path
+                    d="M15,35 C6.71572875,35 0,41.7157288 0,50 C0,58.2842712 6.71572875,65 15,65 C23.2842712,65 30,58.2842712 30,50 C30,41.7157288 23.2842712,35 15,35 Z"
+                    id="Path"
+                    fill="inherit"
+                    fill-rule="nonzero"
+                  ></path>
+                </g>
+              </svg>
+            </div>
           </a>
         </li>
       </ul>
