--- a/find.html
+++ b/find.html
@@ -227,6 +227,75 @@
       </article>
       <article class="open-chat">
         <div class="open-chat__column">
+          <span>#ToyStory</span>
+          <span>#ToyStory#Woody#Buzz Lightyear</span>
+          <div class="open-chat__status">
+            <div class="profile--tiny">
+              <div class="profile-mask">
+                <img class="profile-photo" src="img/img/woody.jpeg"></img>
+              </div>
+            </div>
+            <span>2,202 members |</span><span>Active</span>
+          </div>
+        </div>
+        <div class="open-chat__column">
+          <div class="open-chat__thumbnail">
+            <div class="open-chat__like">
+              <i class="fas fa-heart"></i>
+              <span>200</span>
+            </div>
+            <img class="open-chat__photo" src="img/img/toy_story.jpg"></img>
+          </div>
+        </div>
+      </article>
+      <article class="open-chat">
+        <div class="open-chat__column">
+          <span>#BTS</span>
+          <span>#BTS#ARMY</span>
+          <div class="open-chat__status">
+            <div class="profile--tiny">
+              <div class="profile-mask">
+                <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+              </div>
+            </div>
+            <span>202 members |</span><span>Active</span>
+          </div>
+        </div>
+        <div class="open-chat__column">
+          <div class="open-chat__thumbnail">
+            <div class="open-chat__like">
+              <i class="fas fa-heart"></i>
+              <span>200</span>
+            </div>
+            <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+          </div>
+        </div>
+      </article>
+      <article class="open-chat">
+        <div class="open-chat__column">
+          <span>#BTS</span>
+          <span>#BTS#ARMY</span>
+          <div class="open-chat__status">
+            <div class="profile--tiny">
+              <div class="profile-mask">
+                <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+              </div>
+            </div>
+            <span>202 members |</span><span>Active</span>
+          </div>
+        </div>
+        <div class="open-chat__column">
+          <div class="open-chat__thumbnail">
+            <div class="open-chat__like">
+              <i class="fas fa-heart"></i>
+              <span>200</span>
+            </div>
+            <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+          </div>
+        </div>
+      </article>
+      <article class="open-chat">
+        <div class="open-chat__column">
           <span>#BTS</span>
           <span>#BTS#ARMY</span>
           <div class="open-chat__status">
@@ -312,33 +381,35 @@
           </a>
         </li>
         <li class="bottom-tabbar__column">
-          <div class="badge__number">4</div>
           <a href="chats.html">
-            <svg
-              width="100px"
-              height="100px"
-              viewBox="0 0 100 100"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-            >
-              <title>bottom_tabbar_2_n</title>
-              <g
-                id="bottom_tabbar_2_n"
-                class="bottom_tabbar__icon"
-                stroke="none"
-                stroke-width="1"
-                fill="none"
-                fill-rule="evenodd"
+            <div class="bottom-tabbar__icon-area">
+              <div class="badge__number">4</div>
+              <svg
+                width="100px"
+                height="100px"
+                viewBox="0 0 100 100"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
               >
-                <path
-                  d="M50,-7.10542736e-15 C22.4270833,-7.10542736e-15 0,20.5624997 0,45.8333327 C0.0624403114,56.931035 4.37123033,67.5837354 12.0416667,75.6041657 C12.0416667,75.9479157 11.9895833,76.2916657 11.96875,76.6458323 C11.6145833,81.5312489 11.2083333,87.0624989 5.38541667,92.8854155 C4.1923742,94.0771303 3.83524971,95.8704471 4.48073987,97.4282909 C5.12623004,98.9861346 6.64705549,100.001326 8.33333333,100 L8.33333333,100 C9.05208333,100 25.5,99.864582 39.28125,90.5624988 C42.8085223,91.2863177 46.3992425,91.6562072 50,91.6666655 C77.5729167,91.6666655 100,71.1041657 100,45.8333327 C100,20.5624997 77.5729167,-7.10542736e-15 50,-7.10542736e-15 Z M39.89675,81.4470886 C38.7040271,81.1633309 37.4469309,81.4217045 36.462625,82.1529114 C30.8909694,86.0776164 24.5388906,88.7541449 17.8395,90 C19.7345175,85.8159618 20.7750822,81.2953744 20.900125,76.7035443 C20.962375,75.7693671 21.024625,74.8974684 21.13875,74.1189873 C21.3144446,72.8218517 20.8684181,71.5177814 19.93525,70.6002532 C13.0294432,64.0147197 9.08440101,54.9115078 9,45.3670886 C9,24.7632911 27.61275,8 50.5,8 C73.38725,8 92,24.7632911 92,45.3670886 C92,69.0744304 67.214125,87.9240506 39.89675,81.4470886 Z"
-                  id="Shape"
-                  fill="inherit"
-                  fill-rule="nonzero"
-                ></path>
-              </g>
-            </svg>
+                <title>bottom_tabbar_2_n</title>
+                <g
+                  id="bottom_tabbar_2_n"
+                  class="bottom_tabbar__icon"
+                  stroke="none"
+                  stroke-width="1"
+                  fill="none"
+                  fill-rule="evenodd"
+                >
+                  <path
+                    d="M50,-7.10542736e-15 C22.4270833,-7.10542736e-15 0,20.5624997 0,45.8333327 C0.0624403114,56.931035 4.37123033,67.5837354 12.0416667,75.6041657 C12.0416667,75.9479157 11.9895833,76.2916657 11.96875,76.6458323 C11.6145833,81.5312489 11.2083333,87.0624989 5.38541667,92.8854155 C4.1923742,94.0771303 3.83524971,95.8704471 4.48073987,97.4282909 C5.12623004,98.9861346 6.64705549,100.001326 8.33333333,100 L8.33333333,100 C9.05208333,100 25.5,99.864582 39.28125,90.5624988 C42.8085223,91.2863177 46.3992425,91.6562072 50,91.6666655 C77.5729167,91.6666655 100,71.1041657 100,45.8333327 C100,20.5624997 77.5729167,-7.10542736e-15 50,-7.10542736e-15 Z M39.89675,81.4470886 C38.7040271,81.1633309 37.4469309,81.4217045 36.462625,82.1529114 C30.8909694,86.0776164 24.5388906,88.7541449 17.8395,90 C19.7345175,85.8159618 20.7750822,81.2953744 20.900125,76.7035443 C20.962375,75.7693671 21.024625,74.8974684 21.13875,74.1189873 C21.3144446,72.8218517 20.8684181,71.5177814 19.93525,70.6002532 C13.0294432,64.0147197 9.08440101,54.9115078 9,45.3670886 C9,24.7632911 27.61275,8 50.5,8 C73.38725,8 92,24.7632911 92,45.3670886 C92,69.0744304 67.214125,87.9240506 39.89675,81.4470886 Z"
+                    id="Shape"
+                    fill="inherit"
+                    fill-rule="nonzero"
+                  ></path>
+                </g>
+              </svg>
+            </div>
           </a>
         </li>
         <li class="bottom-tabbar__column">
@@ -371,33 +442,36 @@
           </a>
         </li>
         <li class="bottom-tabbar__column">
-          <div class="badge__dot"></div>
           <a href="more.html">
-            <svg
-              width="100px"
-              height="100px"
-              viewBox="0 0 100 100"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-            >
-              <title>bottom_tabbar_4_n</title>
-              <g
-                id="bottom_tabbar_4_n"
-                class="bottom_tabbar__icon"
-                stroke="none"
-                stroke-width="1"
-                fill="none"
-                fill-rule="evenodd"
+            <div class="bottom-tabbar__icon-area">
+              <div class="badge__dot"></div>
+              <svg
+                width="100px"
+                height="100px"
+                viewBox="0 0 100 100"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
               >
-                <path
-                  d="M50,35 C41.7157288,35 35,41.7157288 35,50 C35,58.2842712 41.7157288,65 50,65 C58.2842712,65 65,58.2842712 65,50 C65,41.7157288 58.2842712,35 50,35 Z M50,55 C47.2385763,55 45,52.7614237 45,50 C45,47.2385763 47.2385763,45 50,45 C52.7614237,45 55,47.2385763 55,50 C55,52.7614237 52.7614237,55 50,55 Z M85,35 C76.7157288,35 70,41.7157288 70,50 C70,58.2842712 76.7157288,65 85,65 C93.2842712,65 100,58.2842712 100,50 C100,41.7157288 93.2842712,35 85,35 Z M85,55 C82.2385763,55 80,52.7614237 80,50 C80,47.2385763 82.2385763,45 85,45 C87.7614237,45 90,47.2385763 90,50 C90,52.7614237 87.7614237,55 85,55 Z M15,35 C6.71572875,35 0,41.7157288 0,50 C0,58.2842712 6.71572875,65 15,65 C23.2842712,65 30,58.2842712 30,50 C30,41.7157288 23.2842712,35 15,35 Z M15,55 C12.2385763,55 10,52.7614237 10,50 C10,47.2385763 12.2385763,45 15,45 C17.7614237,45 20,47.2385763 20,50 C20,52.7614237 17.7614237,55 15,55 Z"
-                  id="Shape"
-                  fill="inherit"
-                  fill-rule="nonzero"
-                ></path>
-              </g>
-            </svg>
+                <title>bottom_tabbar_4_n</title>
+                <g
+                  id="bottom_tabbar_4_n"
+                  class="bottom_tabbar__icon"
+                  stroke="none"
+                  stroke-width="1"
+                  fill="none"
+                  fill-rule="evenodd"
+                >
+                  <path
+                    d="M50,35 C41.7157288,35 35,41.7157288 35,50 C35,58.2842712 41.7157288,65 50,65 C58.2842712,65 65,58.2842712 65,50 C65,41.7157288 58.2842712,35 50,35 Z M50,55 C47.2385763,55 45,52.7614237 45,50 C45,47.2385763 47.2385763,45 50,45 C52.7614237,45 55,47.2385763 55,50 C55,52.7614237 52.7614237,55 50,55 Z M85,35 C76.7157288,35 70,41.7157288 70,50 C70,58.2842712 76.7157288,65 85,65 C93.2842712,65 100,58.2842712 100,50 C100,41.7157288 93.2842712,35 85,35 Z M85,55 C82.2385763,55 80,52.7614237 80,50 C80,47.2385763 82.2385763,45 85,45 C87.7614237,45 90,47.2385763 90,50 C90,52.7614237 87.7614237,55 85,55 Z M15,35 C6.71572875,35 0,41.7157288 0,50 C0,58.2842712 6.71572875,65 15,65 C23.2842712,65 30,58.2842712 30,50 C30,41.7157288 23.2842712,35 15,35 Z M15,55 C12.2385763,55 10,52.7614237 10,50 C10,47.2385763 12.2385763,45 15,45 C17.7614237,45 20,47.2385763 20,50 C20,52.7614237 17.7614237,55 15,55 Z"
+                    id="Shape"
+                    fill="inherit"
+                    fill-rule="nonzero"
+                  ></path>
+                </g>
+              </svg>
+
+            </div>
           </a>
         </li>
       </ul>
