all screen done

--- a/find.html
+++ b/find.html
@@ -93,7 +93,7 @@
         </button>
       </div>
     </nav>
-    <main>
+    <main class="bg-gradaiton">
       <ul class="menu-list">
         <li class="find-menu">
           <svg
@@ -212,16 +212,16 @@
           <p class="find-menu__text">Invite</p>
         </li>
       </ul>
-      <article class="catergory">
+      <article class="category">
         <span>Recoommended Friends</span>
       </article>
-      <div class="catergory__emtpy">
+      <div class="category__emtpy">
         <span>You have no recoommended friends.</span>
       </div>
-      <article class="catergory">
+      <article class="category">
         <span>Open chats</span>
         <div>
-          <span class="catergory__sub-text">Go to Openchat home</span
+          <span class="category__sub-text">Go to Openchat home</span
           ><i class="fas fa-chevron-right"></i>
         </div>
       </article>
