--- a/friends.html
+++ b/friends.html
@@ -121,7 +121,7 @@
         </button>
       </div>
     </nav>
-    <main>
+    <main class="bg-gradaiton">
       <div class="guide-display">
         <a href="#">
           <svg
@@ -135,6 +135,7 @@
             <title>icon_info</title>
             <g
               id="icon_info"
+              class="guide-icon"
               stroke="none"
               stroke-width="1"
               fill="none"
@@ -180,7 +181,7 @@
           </div>
         </div>
       </article>
-      <article class="catergory">
+      <article class="category">
         <span>Channel</span>
         <i class="fas fa-chevron-up"></i>
       </article>
