--- a/freinds.html
+++ b/freinds.html
@@ -26,7 +26,7 @@
         </div>
         <header class="screen-header">
             <span class="header__title">Friends
-                <a href="freinds.html"></a>
+                <a href="friends.html"></a>
             </span>
             <div class="header__icons">
                 <button class="header__btn-search">
@@ -80,7 +80,7 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
-                <a class="nav__link" href="freinds.html">
+                <a class="nav__link" href="friends.html">
                     <div class="nav__icon">
                         <i class="fas fa-user fa-lg"></i>
                     </div>
