--- a/chats.html
+++ b/chats.html
@@ -1,123 +1,135 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chats - kokoa Clone</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="body-header">
-        <div class="status-bar">
-            <div class="status-bar__column">
-                <span>No Service</span>
-                <i class="fas fa-wifi"></i>
-            </div>
-            <div class="status-bar__column">
-                <span>18:43</span>
-            </div>
-            <div class="status-bar__column">
-                <i class="fas fa-lock"></i>
-                <span>110%</span>
-                <i class="fas fa-battery-half"></i>
-                <i class="fas fa-bolt"></i>
-            </div>
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span>No Service</span>
+          <i class="fas fa-wifi"></i>
         </div>
-        <header class="screen-header">
-            <span class="header__title">Chats
-            </span>
-            <div class="header__icons">
-                <button class="header__btn-search">
-                    <i class="fas fa-search fa-lg"></i>
-                </button>
-                <button class="header__btn-chat-plus">
-                    <i class="fas fa-comment-medical fa-lg"></i>
-                </button>
-                <button class="header__btn-music">
-                    <i class="fas fa-music fa-lg"></i>
-                </button>
-                <button class="header__btn-setting" type="button" onclick="location.href='settings.html'" >
-                    <a href="setting.html"></a>
-                    <i class="fas fa-cog fa-lg"></i>
-                </button>
-            </div>
-        </header>
+        <div class="status-bar__column">
+          <span>18:43</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-lock"></i>
+          <span>110%</span>
+          <i class="fas fa-battery-half"></i>
+          <i class="fas fa-bolt"></i>
+        </div>
+      </div>
+      <header class="screen-header">
+        <span class="header__title">Chats </span>
+        <div class="header__icons">
+          <button class="header__btn-search">
+            <i class="fas fa-search fa-lg"></i>
+          </button>
+          <button class="header__btn-chat-plus">
+            <i class="fas fa-comment-medical fa-lg"></i>
+          </button>
+          <button class="header__btn-music">
+            <i class="fas fa-music fa-lg"></i>
+          </button>
+          <button
+            class="header__btn-setting"
+            type="button"
+            onclick="location.href='settings.html'"
+          >
+            <a href="setting.html"></a>
+            <i class="fas fa-cog fa-lg"></i>
+          </button>
+        </div>
+      </header>
     </div>
     <main class="main-content">
-        <a href="chat.html">
-            <article class="user-component">
-                <div class="user-component__left">
-                    <img class="user-component__avatar" src="img/profile_apeach.png" >
-                    <div class="user-component__text">
-                        <h4 class="user-component__nickname ">nickname</h4>
-                        <h6 class="user-component__sub">Hi, how r u ?</h6>
-                    </div>
-                </div>
-                <div class="user-component__right user-component__right--column">
-                    <span class="user-component__right-text user-component__right-text--sm">21:22</span>
-                    <span class="user-component__right-badge badge-num">2</span>
-                </div>
-            </article>
-            <article class="user-component">
-                <div class="user-component__left">
-                    <img class="user-component__avatar" src="img/profile_apeach.png" >
-                    <div class="user-component__text">
-                        <h4 class="user-component__nickname ">nickname</h4>
-                        <h6 class="user-component__sub">Hi, how r u ?</h6>
-                    </div>
-                </div>
-                <div class="user-component__right user-component__right--column">
-                    <span class="user-component__right-text user-component__right-text--sm">21:22</span>
-                    <span class="user-component__right-badge badge-num">2</span>
-                </div>
-            </article>
-        </a>
+      <a href="chat.html">
+        <article class="user-component">
+          <div class="user-component__left">
+            <img class="user-component__avatar" src="img/profile_apeach.png" />
+            <div class="user-component__text">
+              <h4 class="user-component__nickname">nickname</h4>
+              <h6 class="user-component__sub">Hi, how r u ?</h6>
+            </div>
+          </div>
+          <div class="user-component__right user-component__right--column">
+            <span
+              class="user-component__right-text user-component__right-text--sm"
+              >21:22</span
+            >
+            <span class="user-component__right-badge badge-num">2</span>
+          </div>
+        </article>
+        <article class="user-component">
+          <div class="user-component__left">
+            <img class="user-component__avatar" src="img/profile_apeach.png" />
+            <div class="user-component__text">
+              <h4 class="user-component__nickname">nickname</h4>
+              <h6 class="user-component__sub">Hi, how r u ?</h6>
+            </div>
+          </div>
+          <div class="user-component__right user-component__right--column">
+            <span
+              class="user-component__right-text user-component__right-text--sm"
+              >21:22</span
+            >
+            <span class="user-component__right-badge badge-num">2</span>
+          </div>
+        </article>
+      </a>
     </main>
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="freinds.html">
-                    <div class="nav__icon">
-                        <i class="far fa-user fa-lg"></i>
-                    </div>
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <div class="nav__icon">
-                        <div class="badge-num nav__badge-num--ab">1</div>
-                        <i class="fas fa-comment fa-lg"></i>
-                    </div>                                                    
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html">
-                    <div class="nav__icon">
-                        <i class="fas fa-search fa-lg">
-                        </i>
-                    </div>
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__icon">
-                        <div class="nav__badge-dot"></div>
-                        <i class="fas fa-ellipsis-h fa-lg"></i>
-                    </div>
-                </a>
-            </li>
-        </ul>
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html">
+            <div class="nav__icon">
+              <i class="far fa-user fa-lg"></i>
+            </div>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="chats.html">
+            <div class="nav__icon">
+              <div class="badge-num nav__badge-num--ab">1</div>
+              <i class="fas fa-comment fa-lg"></i>
+            </div>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="find.html">
+            <div class="nav__icon">
+              <i class="fas fa-search fa-lg"> </i>
+            </div>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="more.html">
+            <div class="nav__icon">
+              <div class="nav__badge-dot"></div>
+              <i class="fas fa-ellipsis-h fa-lg"></i>
+            </div>
+          </a>
+        </li>
+      </ul>
     </nav>
 
     <!-- big screen info -->
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+      <span>Your screen is too big :(</span>
     </div>
 
     <!-- rotate screen info
     <div id="rotate-mobile">
         <span>Rotate your screen please :)</span>
     </div> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
+      integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ=="
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
