--- a/more.html
+++ b/more.html
@@ -1,180 +1,197 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>More - kokoa Clone</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="body-header">
-        <div class="status-bar">
-            <div class="status-bar__column">
-                <span>No Service</span>
-                <i class="fas fa-wifi"></i>
-            </div>
-            <div class="status-bar__column">
-                <span>18:43</span>
-            </div>
-            <div class="status-bar__column">
-                <i class="fas fa-lock"></i>
-                <span>110%</span>
-                <i class="fas fa-battery-half"></i>
-                <i class="fas fa-bolt"></i>
-            </div>
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span>No Service</span>
+          <i class="fas fa-wifi"></i>
         </div>
-        <header class="screen-header">
-            <span class="header__title">More
-            </span>
-            <div class="header__icons">
-                <button class="header__btn-search">
-                    <i class="fas fa-search fa-lg"></i>
-                </button>
-                <button class="header__btn-music">
-                    <i class="fas fa-music fa-lg"></i>
-                </button>
-                <button class="header__btn-setting badge-parent" type="button" onclick="location.href='settings.html'" >
-                    <div class="badge-dot badge-dot__header"></div>
-                    <i class="fas fa-cog fa-lg"></i>
-                </button>
-            </div>
-        </header>
+        <div class="status-bar__column">
+          <span>18:43</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-lock"></i>
+          <span>110%</span>
+          <i class="fas fa-battery-half"></i>
+          <i class="fas fa-bolt"></i>
+        </div>
+      </div>
+      <header class="screen-header">
+        <span class="header__title">More </span>
+        <div class="header__icons">
+          <button class="header__btn-search">
+            <i class="fas fa-search fa-lg"></i>
+          </button>
+          <button class="header__btn-music">
+            <i class="fas fa-music fa-lg"></i>
+          </button>
+          <button
+            class="header__btn-setting badge-parent"
+            type="button"
+            onclick="location.href='settings.html'"
+          >
+            <div class="badge-dot badge-dot__header"></div>
+            <i class="fas fa-cog fa-lg"></i>
+          </button>
+        </div>
+      </header>
     </div>
     <main class="main-content">
-        <article class="user-component">
-            <div class="user-component__left">
-                <img class="user-component__avatar user-component__avatar--la" src="img/profile_apeach.png" >
-                <div class="user-component__text">
-                    <h4 class="user-component__nickname ">nickname</h4>
-                    <h6 class="user-component__sub">+1 787-493-4219?<i class="fas fa-info-circle"></i></h6>
-                </div>
-            </div>
-            <div class="user-component__right user-component__right--column">
-                <i class="far fa-comment-alt fa-lg"></i>
-            </div>
-        </article>
-        <ul class="find__top-menu">
-            <li class="menu-icon-text">
-                <a href="#">
-                    <i class="far fa-calendar fa-lg"></i>
-                    <span class="menu-icon-text__text menu-icon-text__text--sm">Calendar</span>
-                </a>                             
-            </li>
-            <li class="menu-icon-text">
-                <a class="badge-parent" href="#">
-                    <div class="badge-dot badge-dot__more-menu"></div>
-                    <i class="fas fa-inbox fa-lg"></i>
-                    <span class="menu-icon-text__text menu-icon-text__text--sm">Talk Drive</span>
-                </a>                             
-            </li>
-            <li class="menu-icon-text">
-                <a href="#">
-                    <i class="far fa-smile fa-lg"></i>
-                    <span class="menu-icon-text__text menu-icon-text__text--sm">Emoticons</span>
-                </a>                             
-            </li>
-            <li class="menu-icon-text">
-                <a href="#">
-                    <i class="fas fa-fill-drip fa-lg"></i>
-                    <span class="menu-icon-text__text menu-icon-text__text--sm">Themes</span>
-                </a>                             
-            </li>
+      <article class="user-component">
+        <div class="user-component__left">
+          <img
+            class="user-component__avatar user-component__avatar--la"
+            src="img/profile_apeach.png"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__nickname">nickname</h4>
+            <h6 class="user-component__sub">
+              +1 787-493-4219?<i class="fas fa-info-circle"></i>
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__right user-component__right--column">
+          <i class="far fa-comment-alt fa-lg"></i>
+        </div>
+      </article>
+      <ul class="find__top-menu">
+        <li class="menu-icon-text">
+          <a href="#">
+            <i class="far fa-calendar fa-lg"></i>
+            <span class="menu-icon-text__text menu-icon-text__text--sm"
+              >Calendar</span
+            >
+          </a>
+        </li>
+        <li class="menu-icon-text">
+          <a class="badge-parent" href="#">
+            <div class="badge-dot badge-dot__more-menu"></div>
+            <i class="fas fa-inbox fa-lg"></i>
+            <span class="menu-icon-text__text menu-icon-text__text--sm"
+              >Talk Drive</span
+            >
+          </a>
+        </li>
+        <li class="menu-icon-text">
+          <a href="#">
+            <i class="far fa-smile fa-lg"></i>
+            <span class="menu-icon-text__text menu-icon-text__text--sm"
+              >Emoticons</span
+            >
+          </a>
+        </li>
+        <li class="menu-icon-text">
+          <a href="#">
+            <i class="fas fa-fill-drip fa-lg"></i>
+            <span class="menu-icon-text__text menu-icon-text__text--sm"
+              >Themes</span
+            >
+          </a>
+        </li>
+      </ul>
+      <ul class="find__top-menu">
+        <li class="menu-icon-text">
+          <a href="#">
+            <i class="far fa-user-circle fa-lg"></i>
+            <span class="menu-icon-text__text menu-icon-text__text--sm"
+              >Account</span
+            >
+          </a>
+        </li>
+        <li class="menu-icon-text">
+          <a href="#">
+            <i class="far fa-comments fa-lg"></i>
+            <span class="menu-icon-text__text menu-icon-text__text--sm"
+              >Openchat
+            </span>
+          </a>
+        </li>
+        <li class="menu-icon-text"></li>
+        <li class="menu-icon-text"></li>
+      </ul>
+      <div class="divider__article divider__default"></div>
+      <section class="kokoa-app">
+        <header>Suggestions</header>
+        <ul>
+          <li class="kokoa-app__list">
+            <a href="#">
+              <img class="kokoa-app__img" src="img/kokoa_story.png" />
+              <span>kokoa Story</span>
+            </a>
+          </li>
+          <li class="kokoa-app__list">
+            <a href="#">
+              <img class="kokoa-app__img" src="img/kokoa_friends.png" />
+              <span>kokoa friends</span>
+            </a>
+          </li>
+          <li class="kokoa-app__list">
+            <a href="#">
+              <img class="kokoa-app__img" src="img/kokoa_gem.png" />
+              <span>kokoa gem</span>
+            </a>
+          </li>
+          <li class="kokoa-app__list">
+            <a href="#"> </a>
+          </li>
         </ul>
-        <ul class="find__top-menu">
-            <li class="menu-icon-text">
-                <a href="#">
-                    <i class="far fa-user-circle fa-lg"></i>
-                    <span class="menu-icon-text__text menu-icon-text__text--sm">Account</span>
-                </a>                             
-            </li>
-            <li class="menu-icon-text">
-                <a href="#">
-                    <i class="far fa-comments fa-lg"></i>
-                    <span class="menu-icon-text__text menu-icon-text__text--sm">Openchat
-                    </span>
-                </a>
-            </li>
-            <li class="menu-icon-text">                           
-            </li>
-            <li class="menu-icon-text">                          
-            </li>
-        </ul>
-        <div class="divider__article divider__default"></div>
-        <section class="kokoa-app">
-            <header>
-                Suggestions
-            </header>
-            <ul>
-                <li class="kokoa-app__list">
-                    <a href="#">
-                        <img class="kokoa-app__img" src="img/kokoa_story.png" />
-                        <span>kokoa Story</span>
-                    </a>
-                </li>
-                <li class="kokoa-app__list">
-                    <a href="#">
-                        <img class="kokoa-app__img" src="img/kokoa_friends.png" />
-                        <span>kokoa friends</span>
-                    </a>
-                </li>
-                <li class="kokoa-app__list">
-                    <a href="#">
-                        <img class="kokoa-app__img" src="img/kokoa_gem.png" />
-                        <span>kokoa gem</span>
-                    </a>
-                </li>
-                <li class="kokoa-app__list">
-                    <a href="#">
-                    </a>
-                </li>
-            </ul>
-        </section>
+      </section>
     </main>
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="freinds.html">
-                    <div class="nav__icon">
-                        <i class="far fa-user fa-lg"></i>
-                    </div>
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <div class="nav__icon">
-                        <div class="badge-num nav__badge-num--ab">1</div>
-                        <i class="far fa-comment fa-lg"></i>
-                    </div>                                                    
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html">
-                    <div class="nav__icon">
-                        <i class="fas fa-search fa-lg">
-                        </i>
-                    </div>
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__icon">
-                        <div class="nav__badge-dot"></div>
-                        <i class="fas fa-ellipsis-h fa-lg"></i>
-                    </div>
-                </a>
-            </li>
-        </ul>
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html">
+            <div class="nav__icon">
+              <i class="far fa-user fa-lg"></i>
+            </div>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="chats.html">
+            <div class="nav__icon">
+              <div class="badge-num nav__badge-num--ab">1</div>
+              <i class="far fa-comment fa-lg"></i>
+            </div>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="find.html">
+            <div class="nav__icon">
+              <i class="fas fa-search fa-lg"> </i>
+            </div>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="more.html">
+            <div class="nav__icon">
+              <div class="nav__badge-dot"></div>
+              <i class="fas fa-ellipsis-h fa-lg"></i>
+            </div>
+          </a>
+        </li>
+      </ul>
     </nav>
 
     <!-- big screen info -->
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+      <span>Your screen is too big :(</span>
     </div>
 
     <!-- rotate screen info
     <div id="rotate-mobile">
         <span>Rotate your screen please :)</span>
     </div> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
+      integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ=="
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
